[gd_scene load_steps=27 format=3 uid="uid://duftmdvx17y2k"]

[ext_resource type="PackedScene" uid="uid://cmkfi1tveftlt" path="res://player/butter_snail.tscn" id="1_2ur56"]
[ext_resource type="Script" path="res://levels/house_demo.gd" id="1_6u0dg"]
[ext_resource type="Material" uid="uid://cpbagq7pfavfe" path="res://assets/materials/glow_mat_trashcan.tres" id="3_wd04x"]
[ext_resource type="Material" uid="uid://sx51tv8cn2o5" path="res://assets/materials/house_mat.tres" id="4_30pg7"]
[ext_resource type="PackedScene" uid="uid://bnxapp1cun4o5" path="res://items/item.tscn" id="4_tlx4l"]
[ext_resource type="Material" uid="uid://bki8rm1wlt54o" path="res://assets/materials/house_mat_dither.tres" id="4_wmogy"]
[ext_resource type="PackedScene" uid="uid://cchh2i5x0xywo" path="res://assets/buildings/tut_courtyard.blend" id="5_4u1fe"]
[ext_resource type="Material" uid="uid://c6iritaidg71b" path="res://assets/materials/roof_mat.tres" id="5_ey500"]
[ext_resource type="Material" uid="uid://dplhgw6wu0bwh" path="res://assets/materials/roof_mat_dither.tres" id="5_kejb7"]
[ext_resource type="PackedScene" uid="uid://cs3rev0wqur81" path="res://characters/villager.tscn" id="6_4mi6i"]
[ext_resource type="PackedScene" uid="uid://clmfslnqaqs0i" path="res://items/item_dropoff.tscn" id="6_gqw73"]
[ext_resource type="Material" uid="uid://dcxhf461y2wwm" path="res://assets/materials/stair_mat_dither.tres" id="8_yidru"]
[ext_resource type="Texture2D" uid="uid://bgn72oiqbtn2j" path="res://assets/items/rubbish.png" id="10_yankm"]
[ext_resource type="Texture2D" uid="uid://c3txy4duj7qwr" path="res://assets/skybox/skybox.png" id="12_wl0yb"]
[ext_resource type="Material" uid="uid://bdnhfftq03tof" path="res://assets/materials/glow_mat.tres" id="13_7qny4"]
[ext_resource type="Texture2D" uid="uid://88c34cu5d8h7" path="res://assets/ui/blank.png" id="16_eehyo"]
[ext_resource type="Texture2D" uid="uid://b8dbrpu7roksh" path="res://assets/ui/comic_1.png" id="16_ryy3x"]
[ext_resource type="Texture2D" uid="uid://wgomimgjm5k" path="res://assets/ui/comic2.png" id="17_lh7p0"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_okt47"]
radius = 2.08021

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_h6dok"]
panorama = ExtResource("12_wl0yb")
filter = false

[sub_resource type="Sky" id="Sky_vagjy"]
sky_material = SubResource("PanoramaSkyMaterial_h6dok")

[sub_resource type="Environment" id="Environment_80a6f"]
background_mode = 2
sky = SubResource("Sky_vagjy")
sky_rotation = Vector3(-0.340339, 2.37714, 3.14159)
reflected_light_source = 2
tonemap_mode = 3
ssil_radius = 1.0
ssil_intensity = 3.0
ssil_sharpness = 0.5
sdfgi_enabled = true
sdfgi_min_cell_size = 0.1
sdfgi_y_scale = 0
sdfgi_energy = 0.1
glow_normalized = true
glow_bloom = 0.1

[sub_resource type="CylinderShape3D" id="CylinderShape3D_e6mc5"]
height = 1.49634
radius = 2.86393

[sub_resource type="CylinderShape3D" id="CylinderShape3D_ejuom"]
radius = 3.6096

[sub_resource type="BoxShape3D" id="BoxShape3D_gnwai"]
size = Vector3(2.48331, 3.71327, 2.62888)

[sub_resource type="BoxShape3D" id="BoxShape3D_ovte4"]
size = Vector3(2.52117, 2.76549, 3.11133)

[node name="TownDemo" type="Node3D" node_paths=PackedStringArray("tut_guy", "trash", "advance_scene_zone", "trash_highlight")]
script = ExtResource("1_6u0dg")
tut_guy = NodePath("TutVillager")
trash = NodePath("Item")
advance_scene_zone = NodePath("ExitTutArea")
tut_glow = ExtResource("13_7qny4")
tut_can_glow = ExtResource("3_wd04x")
trash_highlight = NodePath("tut_courtyard2/trash_can")

[node name="ButterSnail" parent="." instance=ExtResource("1_2ur56")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.33636, 1.09726, 6.5625)
angular_damp = 1.0
trail_make_height = 0.6

[node name="tut_courtyard2" parent="." instance=ExtResource("5_4u1fe")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)

[node name="house_outer" parent="tut_courtyard2" index="3"]
surface_material_override/0 = ExtResource("4_wmogy")
surface_material_override/1 = ExtResource("5_kejb7")

[node name="tall_house" parent="tut_courtyard2" index="4"]
surface_material_override/0 = ExtResource("4_30pg7")
surface_material_override/2 = ExtResource("5_ey500")

[node name="tall_house2" parent="tut_courtyard2" index="5"]
surface_material_override/0 = ExtResource("4_30pg7")
surface_material_override/1 = ExtResource("5_ey500")

[node name="tall_house3" parent="tut_courtyard2" index="7"]
surface_material_override/0 = ExtResource("4_30pg7")
surface_material_override/1 = ExtResource("5_ey500")

[node name="shed" parent="tut_courtyard2" index="8"]
surface_material_override/0 = ExtResource("8_yidru")
surface_material_override/1 = ExtResource("5_ey500")

[node name="tall_house2_001" parent="tut_courtyard2" index="9"]
surface_material_override/0 = ExtResource("4_wmogy")
surface_material_override/1 = ExtResource("5_kejb7")

[node name="tall_house3_001" parent="tut_courtyard2" index="10"]
surface_material_override/0 = ExtResource("4_wmogy")
surface_material_override/1 = ExtResource("5_kejb7")

[node name="StaticBody3D" parent="tut_courtyard2/tall_house3_001" index="0"]
collision_mask = 17

[node name="StaticBody3D" parent="tut_courtyard2/right_curve_wall" index="0"]
collision_layer = 17
collision_mask = 17

[node name="ItemDropoff" parent="." node_paths=PackedStringArray("dropoff_loc", "item_required") instance=ExtResource("6_gqw73")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.57627, 0, 4.18665)
collision_mask = 2
dropoff_loc = NodePath("Marker3D")
item_required = NodePath("../Item")

[node name="CollisionShape3D" type="CollisionShape3D" parent="ItemDropoff"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.387309, 0.591046, -1.33387)
shape = SubResource("CylinderShape3D_okt47")

[node name="Marker3D" type="Marker3D" parent="ItemDropoff"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.462576, 0)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 0, 0)
light_color = Color(0.639216, 0.411765, 0.278431, 1)
light_energy = 1.2
light_indirect_energy = 1.2
light_volumetric_fog_energy = 1.2
shadow_enabled = true
shadow_blur = 2.0
sky_mode = 1

[node name="DirectionalLight3D2" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 0, 0)
light_color = Color(0.360784, 0.588235, 0.721569, 1)
light_energy = 1.2
light_indirect_energy = 4.0
light_volumetric_fog_energy = 1.2
sky_mode = 1

[node name="DirectionalLight3D3" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 0, 0)
light_energy = 0.25
light_indirect_energy = 4.0
shadow_enabled = true
shadow_blur = 2.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_80a6f")

[node name="Item" parent="." instance=ExtResource("4_tlx4l")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.25077, 0.8306, -3.7036)
texture = ExtResource("10_yankm")

[node name="TutVillager" parent="." node_paths=PackedStringArray("dialogue_influence", "speech_pos") instance=ExtResource("6_4mi6i")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.79496, 0.611918, 2.30942)
dialogue_influence = NodePath("Area3D")
speech_pos = NodePath("Marker3D")
speech = Array[String](["Buttersnail, there's some litter you should clean up!"])

[node name="Area3D" type="Area3D" parent="TutVillager"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="TutVillager/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.183842, 0, -0.868185)
shape = SubResource("CylinderShape3D_e6mc5")

[node name="Marker3D" type="Marker3D" parent="TutVillager"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.80944, 1.64373, 4.76837e-07)

[node name="Villager" parent="." node_paths=PackedStringArray("dialogue_influence", "speech_pos") instance=ExtResource("6_4mi6i")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.84179, 0.618292, -0.48132)
dialogue_influence = NodePath("Area3D")
speech_pos = NodePath("Marker3D")
speech = Array[String](["Buttersnail! It's picnic day today!"])

[node name="Area3D" type="Area3D" parent="Villager"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Villager/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.80328)
shape = SubResource("CylinderShape3D_ejuom")

[node name="Marker3D" type="Marker3D" parent="Villager"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.387349, 1.49233, 0)

[node name="ExitTutArea" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -9.61227, -0.281166, -2.16089)
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="ExitTutArea"]
shape = SubResource("BoxShape3D_gnwai")

[node name="Villager2" parent="." node_paths=PackedStringArray("dialogue_influence", "speech_pos") instance=ExtResource("6_4mi6i")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -9.63975, 0.846468, 4.24668)
dialogue_influence = NodePath("Area3D")
speech_pos = NodePath("Marker3D")
speech = Array[String](["I'm so excited for picnic day!"])

[node name="Area3D" type="Area3D" parent="Villager2"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Villager2/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.76063)
shape = SubResource("BoxShape3D_ovte4")

[node name="Marker3D" type="Marker3D" parent="Villager2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.7278, 0)

[node name="Comic1" type="TextureRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("16_ryy3x")
expand_mode = 5

[node name="Comic2" type="TextureRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("17_lh7p0")
expand_mode = 5

[node name="Blackout" type="TextureRect" parent="."]
visible = false
modulate = Color(0, 0, 0, 1)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("16_eehyo")

[connection signal="item_recieved" from="ItemDropoff" to="." method="_trash_deposited"]

[editable path="tut_courtyard2"]
